# examples

./: .gitignore  .gitmodules  README.md
esp32/: CMakeLists.txt  Makefile  README.md  bm_config.h  environment.yml  lwip_support.c  lwipopts.h  main.c  partitions.csv  sdkconfig
esp32/arch/: cc.h  sys_arch.c
esp32/port/: adi_hal.c  config.c  dfu.c  rtc.c
esp32/scripts/: build.sh  config.sh  flash.sh  monitor.sh
stm32u5/: .cproject  .gitignore  .mxproject  .project  README.md  bm_mote_example.ioc  flash.sh  openocd.cfg
stm32u5/.metadata/: .log4j2.xml  version.ini
stm32u5/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
stm32u5/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
stm32u5/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
stm32u5/Core/Inc/: bm_example.h  main.h  stm32u5xx_it.h  usart.h
stm32u5/Core/Inc/bm_netif/: hal_port_specific.h
stm32u5/Core/Src/: adc.c  bm_example.c  bm_platform_stm32u5.c  gpdma.c  gpio.c  i2c.c  iwdg.c  main.c  rtc.c  spi.c  stm32u5xx_hal_msp.c  stm32u5xx_hal_timebase_tim.c  stm32u5xx_it.c  usart.c  usb_otg.c
stm32u5/Core/Src/bm_netif/: adin2111.c  hal.c  stm32_dma.c  stm32_irq.c  stm32_spi.c
stm32u5/Debug/: bm_mote_example.elf  bm_mote_example.list  bm_mote_example.map  makefile  objects.list
stm32u5/Debug/Core/Src/: adc.cyclo  adc.d  adc.su  gpdma.d  gpio.cyclo  gpio.d  gpio.su  i2c.d  icache.d  iwdg.cyclo  iwdg.d  iwdg.su  main.cyclo  main.d  main.su  rtc.cyclo  rtc.d  rtc.su  spi.cyclo  spi.d  spi.su  stm32u5xx_hal_msp.d  stm32u5xx_hal_timebase_tim.d  stm32u5xx_it.cyclo  stm32u5xx_it.d  stm32u5xx_it.su  subdir.mk  system_stm32u5xx.d  usart.cyclo  usart.d  usart.su  usb_otg.d
stm32u5/Debug/Core/Startup/: startup_stm32u575citxq.d  subdir.mk
stm32u5/Debug/Drivers/STM32U5xx_HAL_Driver/Src/: stm32u5xx_hal.d  stm32u5xx_hal_adc.d  stm32u5xx_hal_adc_ex.d  stm32u5xx_hal_cortex.d  stm32u5xx_hal_dma.d  stm32u5xx_hal_dma_ex.d  stm32u5xx_hal_exti.d  stm32u5xx_hal_flash.d  stm32u5xx_hal_flash_ex.d  stm32u5xx_hal_gpio.d  stm32u5xx_hal_gtzc.d  stm32u5xx_hal_i2c.d  stm32u5xx_hal_i2c_ex.d  stm32u5xx_hal_icache.d  stm32u5xx_hal_pcd.d  stm32u5xx_hal_pcd_ex.d  stm32u5xx_hal_pwr.d  stm32u5xx_hal_pwr_ex.d  stm32u5xx_hal_rcc.d  stm32u5xx_hal_rcc_ex.d  stm32u5xx_hal_spi.cyclo  stm32u5xx_hal_spi.d  stm32u5xx_hal_spi.su  stm32u5xx_hal_spi_ex.d  stm32u5xx_hal_tim.d  stm32u5xx_hal_tim_ex.d  stm32u5xx_ll_dma.d  stm32u5xx_ll_exti.d  stm32u5xx_ll_gpio.d  stm32u5xx_ll_lpgpio.d  stm32u5xx_ll_lpuart.cyclo  stm32u5xx_ll_lpuart.d  stm32u5xx_ll_lpuart.su  stm32u5xx_ll_rcc.cyclo  stm32u5xx_ll_rcc.d  stm32u5xx_ll_rcc.su  stm32u5xx_ll_rtc.cyclo  stm32u5xx_ll_rtc.d  stm32u5xx_ll_rtc.su  stm32u5xx_ll_usart.cyclo  (+5 more)
